yv-compiler/src/ts/YarnovaParser.ts
// Generated from yv-compiler/src/antlr/Yarnova.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import YarnovaVisitor from "./YarnovaVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class YarnovaParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly Identifier = 28;
	public static readonly Literal = 29;
	public static readonly StringLiteral = 30;
	public static readonly NumericLiteral = 31;
	public static readonly BooleanLiteral = 32;
	public static readonly WS = 33;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_program = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_lambdaDeclaration = 2;
	public static readonly RULE_lambdaExpression = 3;
	public static readonly RULE_variableDeclaration = 4;
	public static readonly RULE_arrayDeclaration = 5;
	public static readonly RULE_typeAnnotation = 6;
	public static readonly RULE_initialValue = 7;
	public static readonly RULE_functionDeclaration = 8;
	public static readonly RULE_functionCall = 9;
	public static readonly RULE_functionCallParamList = 10;
	public static readonly RULE_parameterList = 11;
	public static readonly RULE_parameter = 12;
	public static readonly RULE_block = 13;
	public static readonly RULE_blockStatement = 14;
	public static readonly RULE_returnExpression = 15;
	public static readonly RULE_jsxDeclaration = 16;
	public static readonly RULE_tagType = 17;
	public static readonly RULE_stylingDeclaration = 18;
	public static readonly RULE_stylingProperty = 19;
	public static readonly RULE_logDeclaration = 20;
	public static readonly RULE_expression = 21;
	public static readonly RULE_closure = 22;
	public static readonly literalNames: (string | null)[] = [ null, "'const'", 
                                                            "'= ('", "')'", 
                                                            "':'", "'=>'", 
                                                            "'let'", "'='", 
                                                            "'arr'", "'['", 
                                                            "', '", "']'", 
                                                            "'string'", 
                                                            "'number'", 
                                                            "'boolean'", 
                                                            "'func'", "'('", 
                                                            "'.'", "'{'", 
                                                            "'}'", "'return'", 
                                                            "'<'", "'>'", 
                                                            "'</'", "'style={'", 
                                                            "'-'", "';'", 
                                                            "'print('" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             "Identifier", 
                                                             "Literal", 
                                                             "StringLiteral", 
                                                             "NumericLiteral", 
                                                             "BooleanLiteral", 
                                                             "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "statement", "lambdaDeclaration", "lambdaExpression", "variableDeclaration", 
		"arrayDeclaration", "typeAnnotation", "initialValue", "functionDeclaration", 
		"functionCall", "functionCallParamList", "parameterList", "parameter", 
		"block", "blockStatement", "returnExpression", "jsxDeclaration", "tagType", 
		"stylingDeclaration", "stylingProperty", "logDeclaration", "expression", 
		"closure",
	];
	public get grammarFileName(): string { return "Yarnova.g4"; }
	public get literalNames(): (string | null)[] { return YarnovaParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return YarnovaParser.symbolicNames; }
	public get ruleNames(): string[] { return YarnovaParser.ruleNames; }
	public get serializedATN(): number[] { return YarnovaParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, YarnovaParser._ATN, YarnovaParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let localctx: ProgramContext = new ProgramContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, YarnovaParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 49;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 404783426) !== 0)) {
				{
				{
				this.state = 46;
				this.statement();
				}
				}
				this.state = 51;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let localctx: StatementContext = new StatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, YarnovaParser.RULE_statement);
		try {
			this.state = 59;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 6:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 52;
				this.variableDeclaration();
				}
				break;
			case 15:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 53;
				this.functionDeclaration();
				}
				break;
			case 21:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 54;
				this.jsxDeclaration();
				}
				break;
			case 27:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 55;
				this.logDeclaration();
				}
				break;
			case 28:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 56;
				this.functionCall();
				}
				break;
			case 1:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 57;
				this.lambdaDeclaration();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 58;
				this.arrayDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public lambdaDeclaration(): LambdaDeclarationContext {
		let localctx: LambdaDeclarationContext = new LambdaDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, YarnovaParser.RULE_lambdaDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 61;
			this.match(YarnovaParser.T__0);
			this.state = 62;
			this.match(YarnovaParser.Identifier);
			this.state = 63;
			this.match(YarnovaParser.T__1);
			this.state = 65;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===28) {
				{
				this.state = 64;
				this.parameterList();
				}
			}

			this.state = 67;
			this.match(YarnovaParser.T__2);
			this.state = 70;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===4) {
				{
				this.state = 68;
				this.match(YarnovaParser.T__3);
				this.state = 69;
				this.typeAnnotation();
				}
			}

			this.state = 72;
			this.match(YarnovaParser.T__4);
			this.state = 73;
			this.lambdaExpression();
			this.state = 75;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===26) {
				{
				this.state = 74;
				this.closure();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public lambdaExpression(): LambdaExpressionContext {
		let localctx: LambdaExpressionContext = new LambdaExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, YarnovaParser.RULE_lambdaExpression);
		try {
			this.state = 81;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 5, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 77;
				this.expression();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 78;
				this.block();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 79;
				this.functionCall();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 80;
				this.logDeclaration();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public variableDeclaration(): VariableDeclarationContext {
		let localctx: VariableDeclarationContext = new VariableDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, YarnovaParser.RULE_variableDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 83;
			this.match(YarnovaParser.T__5);
			this.state = 84;
			this.match(YarnovaParser.Identifier);
			this.state = 87;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===4) {
				{
				this.state = 85;
				this.match(YarnovaParser.T__3);
				this.state = 86;
				this.typeAnnotation();
				}
			}

			this.state = 91;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===7) {
				{
				this.state = 89;
				this.match(YarnovaParser.T__6);
				this.state = 90;
				this.initialValue();
				}
			}

			this.state = 94;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===26) {
				{
				this.state = 93;
				this.closure();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public arrayDeclaration(): ArrayDeclarationContext {
		let localctx: ArrayDeclarationContext = new ArrayDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, YarnovaParser.RULE_arrayDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 96;
			this.match(YarnovaParser.T__7);
			this.state = 97;
			this.match(YarnovaParser.Identifier);
			this.state = 100;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===4) {
				{
				this.state = 98;
				this.match(YarnovaParser.T__3);
				this.state = 99;
				this.typeAnnotation();
				}
			}

			this.state = 102;
			this.match(YarnovaParser.T__6);
			this.state = 103;
			this.match(YarnovaParser.T__8);
			this.state = 104;
			this.expression();
			this.state = 109;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===10) {
				{
				{
				this.state = 105;
				this.match(YarnovaParser.T__9);
				this.state = 106;
				this.expression();
				}
				}
				this.state = 111;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 112;
			this.match(YarnovaParser.T__10);
			this.state = 114;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===26) {
				{
				this.state = 113;
				this.closure();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public typeAnnotation(): TypeAnnotationContext {
		let localctx: TypeAnnotationContext = new TypeAnnotationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, YarnovaParser.RULE_typeAnnotation);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 116;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 28672) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public initialValue(): InitialValueContext {
		let localctx: InitialValueContext = new InitialValueContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, YarnovaParser.RULE_initialValue);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 118;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionDeclaration(): FunctionDeclarationContext {
		let localctx: FunctionDeclarationContext = new FunctionDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, YarnovaParser.RULE_functionDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 120;
			this.match(YarnovaParser.T__14);
			this.state = 121;
			this.match(YarnovaParser.Identifier);
			this.state = 122;
			this.match(YarnovaParser.T__15);
			this.state = 124;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===28) {
				{
				this.state = 123;
				this.parameterList();
				}
			}

			this.state = 126;
			this.match(YarnovaParser.T__2);
			this.state = 129;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===4) {
				{
				this.state = 127;
				this.match(YarnovaParser.T__3);
				this.state = 128;
				this.typeAnnotation();
				}
			}

			this.state = 131;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionCall(): FunctionCallContext {
		let localctx: FunctionCallContext = new FunctionCallContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, YarnovaParser.RULE_functionCall);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 133;
			this.match(YarnovaParser.Identifier);
			this.state = 138;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===17) {
				{
				{
				this.state = 134;
				this.match(YarnovaParser.T__16);
				this.state = 135;
				this.match(YarnovaParser.Identifier);
				}
				}
				this.state = 140;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 141;
			this.match(YarnovaParser.T__15);
			this.state = 145;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 15, this._ctx) ) {
			case 1:
				{
				this.state = 142;
				this.functionCallParamList();
				}
				break;
			case 2:
				{
				this.state = 143;
				this.expression();
				}
				break;
			case 3:
				{
				this.state = 144;
				this.functionCall();
				}
				break;
			}
			this.state = 147;
			this.match(YarnovaParser.T__2);
			this.state = 149;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 16, this._ctx) ) {
			case 1:
				{
				this.state = 148;
				this.closure();
				}
				break;
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public functionCallParamList(): FunctionCallParamListContext {
		let localctx: FunctionCallParamListContext = new FunctionCallParamListContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, YarnovaParser.RULE_functionCallParamList);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 151;
			this.expression();
			this.state = 156;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===10) {
				{
				{
				this.state = 152;
				this.match(YarnovaParser.T__9);
				this.state = 153;
				this.expression();
				}
				}
				this.state = 158;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public parameterList(): ParameterListContext {
		let localctx: ParameterListContext = new ParameterListContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, YarnovaParser.RULE_parameterList);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 159;
			this.parameter();
			this.state = 164;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===10) {
				{
				{
				this.state = 160;
				this.match(YarnovaParser.T__9);
				this.state = 161;
				this.parameter();
				}
				}
				this.state = 166;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public parameter(): ParameterContext {
		let localctx: ParameterContext = new ParameterContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, YarnovaParser.RULE_parameter);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 167;
			this.match(YarnovaParser.Identifier);
			this.state = 170;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===4) {
				{
				this.state = 168;
				this.match(YarnovaParser.T__3);
				this.state = 169;
				this.typeAnnotation();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let localctx: BlockContext = new BlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, YarnovaParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 172;
			this.match(YarnovaParser.T__17);
			this.state = 182;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 22, this._ctx) ) {
			case 1:
				{
				this.state = 176;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===6 || _la===27) {
					{
					{
					this.state = 173;
					this.blockStatement();
					}
					}
					this.state = 178;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			case 2:
				{
				this.state = 180;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===20) {
					{
					this.state = 179;
					this.returnExpression();
					}
				}

				}
				break;
			}
			this.state = 184;
			this.match(YarnovaParser.T__18);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public blockStatement(): BlockStatementContext {
		let localctx: BlockStatementContext = new BlockStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, YarnovaParser.RULE_blockStatement);
		try {
			this.state = 188;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 6:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 186;
				this.variableDeclaration();
				}
				break;
			case 27:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 187;
				this.logDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public returnExpression(): ReturnExpressionContext {
		let localctx: ReturnExpressionContext = new ReturnExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, YarnovaParser.RULE_returnExpression);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 190;
			this.match(YarnovaParser.T__19);
			this.state = 195;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 807469056) !== 0)) {
				{
				this.state = 193;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 16:
				case 28:
				case 29:
					{
					this.state = 191;
					this.expression();
					}
					break;
				case 21:
					{
					this.state = 192;
					this.jsxDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 197;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 199;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===26) {
				{
				this.state = 198;
				this.closure();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public jsxDeclaration(): JsxDeclarationContext {
		let localctx: JsxDeclarationContext = new JsxDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, YarnovaParser.RULE_jsxDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 201;
			this.match(YarnovaParser.T__20);
			this.state = 202;
			this.tagType();
			this.state = 204;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===24) {
				{
				this.state = 203;
				this.stylingDeclaration();
				}
			}

			this.state = 206;
			this.match(YarnovaParser.T__21);
			this.state = 208;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===28) {
				{
				this.state = 207;
				this.match(YarnovaParser.Identifier);
				}
			}

			this.state = 220;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===21) {
				{
				this.state = 210;
				this.jsxDeclaration();
				{
				this.state = 212;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===28) {
					{
					this.state = 211;
					this.match(YarnovaParser.Identifier);
					}
				}

				this.state = 217;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===21) {
					{
					{
					this.state = 214;
					this.jsxDeclaration();
					}
					}
					this.state = 219;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				}
			}

			this.state = 222;
			this.match(YarnovaParser.T__22);
			this.state = 223;
			this.tagType();
			this.state = 224;
			this.match(YarnovaParser.T__21);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public tagType(): TagTypeContext {
		let localctx: TagTypeContext = new TagTypeContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, YarnovaParser.RULE_tagType);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 226;
			this.match(YarnovaParser.Identifier);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public stylingDeclaration(): StylingDeclarationContext {
		let localctx: StylingDeclarationContext = new StylingDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, YarnovaParser.RULE_stylingDeclaration);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 228;
			this.match(YarnovaParser.T__23);
			this.state = 229;
			this.stylingProperty();
			this.state = 230;
			this.match(YarnovaParser.T__18);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public stylingProperty(): StylingPropertyContext {
		let localctx: StylingPropertyContext = new StylingPropertyContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, YarnovaParser.RULE_stylingProperty);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 232;
			this.match(YarnovaParser.Identifier);
			this.state = 235;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===25) {
				{
				this.state = 233;
				this.match(YarnovaParser.T__24);
				this.state = 234;
				this.match(YarnovaParser.Identifier);
				}
			}
